tests/NormalTests/paczka1/fuzzy1/21087131.err
Error in line 5: nODE A151 95,3
Error in line 34: 2w4idcQ S165 20,6
Error in line 39: tbx2KCT A21\ 19,1
